# qtsamplecodes

./: README.md  test_qprocess_lambda.cpp
ntpclient/: CMakeLists.txt  ntpclient.cpp  ntpclient.h  ntpnotifier.cpp  ntpnotifier.h  ntppackage.cpp  ntppackage.h  ntptimestamp.cpp  ntptimestamp.h  test_ntp.cpp
unit-tests/: CMakeLists.txt  test_qprocess_lambda.cpp
